--- a/todo.txt
+++ b/todo.txt
@@ -76,3 +76,4 @@ x 2021-06-12 (A) 2021-06-08 Intrigue, humor, establishing shot +video @complex
 2021-06-17 Export structs from C +code @complex
 2021-06-17 GLSL inout directive can be useful +code @complex
 (A) 2021-06-20 Like and subscribe frame +video @simple
+2021-06-21 Presentation remote +video @simple
