--- a/todo.txt
+++ b/todo.txt
@@ -74,6 +74,6 @@ x 2021-06-12 (A) 2021-06-08 Intrigue, humor, establishing shot +video @complex
 2021-06-12 Highlight string injected code +code @complex
 (B) 2021-06-12 Blurred rendered background for pictures (or even integrate it with Projector) +code @complex
 2021-06-17 Export structs from C +code @complex
-2021-06-17 GLSL inout directive can be useful +code @complex
+(B) 2021-06-17 GLSL inout directive can be useful: pointers in C +code @complex
 (A) 2021-06-20 Like and subscribe frame +video @simple
 2021-06-21 Presentation remote +video @simple
